@@ -22,6 +22,7 @@
 	* lib/qwik/pages.rb: New method title_list_keys and date_list_keys.
 
 	* lib/qwik/pages.rb: Do not cache Page objects.
+	* lib/qwik/pages.rb: Clear unused code.
 
 2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>
 
